Login password len required

--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="../styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
+    <link rel="icon" href="/images/Logo_form.png" />
     <title>Login</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    <img src="../images/help.png" alt="bg" id="bg-picture" />
     <div id="container">
-
-        <form action="../index.html">
-            <a class="logo-link" href="../index.html">
-                <div class="logo">
-                    <img src="../images/Logo_form.png" alt="">
-                    <h1>KSHub</h1>
-                </div>
-            </a>
-            <input type="text" name="name" id="name" placeholder="Email">
-            <input type="password" name="password" id="password" placeholder="Password">
-            <input type="submit" value="Login">
-        </form>
+      <form action="../index.html">
+        <a class="logo" href="..">
+          <img src="../images/Logo_form.png" alt="LOGO" />
+          <h1>KSHub</h1>
+        </a>
+        <input type="email" name="name" id="name" placeholder="Email" required />
+        <input
+          type="password"
+          name="password"
+          id="password"
+          placeholder="Password"
+          required 
+          minlength="8"
+        />
+        <input type="submit" value="Login" />
+        <a href="/registration/">Konto erstellen</a>
+      </form>
     </div>
-</body>
+  </body>
 </html>
