--- a/frontend/matches/index.html
+++ b/frontend/matches/index.html
@@ -51,7 +51,7 @@
                 <li><a href="/profile/">Profile</a></li>
                 <li><a href="/matches/" style="font-weight: bold;">Matches</a></li>
                 <li>Chats</li>
-                <li>Einstellungen</li>
+                <li><a href="/settings/">Einstellungen</a></li>
             </ul>
         </div>
     </div>
