--- a/frontend/profile/index.html
+++ b/frontend/profile/index.html
@@ -24,18 +24,62 @@
             </ul>
         </nav>
     </header>
-    <div class="flexbox">
-        <div class="content">
-            <h1>aaaaaaaaaaaaaaa</h1>
+    <main>
+    <div class="content">
+        <a href="/settings/">Bearbeiten</a>
+        <div id="profile">
+            <div id="fixed-information">
+                <img src="/images/profile.jpeg" alt="Profile Picture">
+                <div id="personal-information">
+                    <h1>Mohamed Mustafa</h1>
+                    <h2>mohamed.mustafa@student.ksh.ch</h2>
+                    <h2 class="rating">Rating</h2>
+                </div>
+            </div>
+            <div class="ratings">
+                <div id="subject">
+                    <h1>Mathematik</h1>
+                    <div id="scale">
+                        <div id="rating"></div>
+                    </div>
+                </div>
+                <div id="subject">
+                    <h1>Französisch</h1>
+                    <div id="scale">
+                        <div id="rating"></div>
+                    </div>
+                </div>
+                <div id="subject">
+                    <h1>Englisch</h1>
+                    <div id="scale">
+                        <div id="rating"></div>
+                    </div>
+                </div>
+                <div id="subject">
+                    <h1>Deutsch</h1>
+                    <div id="scale">
+                        <div id="rating"></div>
+                    </div>
+                </div>
+                <div id="subject">
+                    <h1>Sex</h1>
+                    <div id="scale">
+                        <div id="yes"></div>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
+    <div class="flexbox">
         <div class="sidebar">
             <ul class="sidelist">
                 <li style="font-weight: bold;">Profile</li>
-                <li><a href="/matches/index.html">Matches</a></li>
-                <li>Chats</li>
-                <li>Einstellungen</li>
+                <li><a href="/matches/">Matches</a></li>
+                <li><a href="/chat/">Chats</a></li>
+                <li><a href="/settings/">Einstellungen</a></li>
             </ul>
         </div>
     </div>
+    </main>
 </body>
 </html>
