--- a/frontend/chat/index.html
+++ b/frontend/chat/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../styles.css">
-        <link rel="stylesheet" href="/chat/styles.css">
+        <link rel="stylesheet" href="/frontend/chat/styles.css">
         <link rel="icon" href="/images/Logo_form.png">
-        <title>Profile</title>
+        <title>Chat</title>
     </head>
 <body>
     <header>
@@ -32,14 +32,15 @@
             </ul>
         </div>
         <div id="content">
-            <h1>heeloo</h1>
+            <input id="input" type="text">
+            <input id="send" type="submit">
         </div>
         <div id="sidebar">
             <ul>
-                <li><a href="/profile/">Profile</a></li>
-                <li><a href="/matches/">Matches</a></li>
+                <li><a href="/frontend/profile/">Profile</a></li>
+                <li><a href="/frontend/matches/">Matches</a></li>
                 <li style="font-weight: bold;">Chats</li>
-                <li><a href="/settings/">Einstellungen</a></li>
+                <li><a href="/frontend/settings/">Einstellungen</a></li>
             </ul>
         </div>
     </div>
