--- a/frontend/matches/index.html
+++ b/frontend/matches/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../styles.css">
-        <link rel="stylesheet" href="/matches/styles.css">
-        <link rel="stylesheet" href="/profile/styles.css">
-        <link rel="icon" href="/images/Logo_form.png">
+        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="../profile/styles.css">
+        <link rel="icon" href="../images/Logo_form.png">
         <title>Matches</title>
     </head>
 <body>
@@ -16,23 +16,26 @@
             <ul>
                 <li>
                     <a class="logo"href="index.html">
-                        <img src="/images/Logo_form.png" alt="logo">
+                        <img src="../images/Logo_form.png" alt="logo">
                         <h1>KSHub</h1>
                     </a>
                 </li>
-                    <img src="/images/profile.jpeg" alt="profile picture" class="profilePicture">
+                    <img src="../images/profile.jpeg" alt="profile picture" class="profilePicture">
                 </a></li>
             </ul>
         </nav>
     </header>
     <main>
     <div class="content">
-        <a href="/profile/">Zurück</a>
+        <a href="../profile/">Zurück</a>
         <h1>Deine Matches</h1>
         <h3>Anfragen an dich</h3>
         <div class="profile-list">
-            <div class="profiles"></div>
-            <div class="profiles"></div>
+            <div class="profiles">
+                <div class="profile-picture"></div>
+                <div class="name">Fernando</div>
+                <div class="rating">XXXXX</div>
+            </div>
             <div class="profiles"></div>
             <div class="profiles"></div>
             <div class="profiles"></div>
@@ -43,15 +46,21 @@
             <div class="profiles"></div>
         </div>
         <h3>Anfragen von dir</h3>
-        <div class="profile-list"></div>
+        <div class="profile-list">
+            <div class="profiles"></div>
+            <div class="profiles"></div>
+            <div class="profiles"></div>
+            <div class="profiles"></div>
+            <div class="profiles"></div>
+        </div>
     </div>
     <div class="flexbox">
         <div class="sidebar">
             <ul class="sidelist">
-                <li><a href="/profile/">Profile</a></li>
-                <li><a href="/matches/" style="font-weight: bold;">Matches</a></li>
-                <li>Chats</li>
-                <li><a href="/settings/">Einstellungen</a></li>
+                <li><a href="../profile/">Profile</a></li>
+                <li><a href="../matches/" style="font-weight: bold;">Matches</a></li>
+                <li><a href="../chat/">Chats</a></li>
+                <li><a href="../settings/">Einstellungen</a></li>
             </ul>
         </div>
     </div>
