--- a/frontend/profile/index.html
+++ b/frontend/profile/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../styles.css">
-        <link rel="stylesheet" href="/profile/styles.css">
+        <link rel="stylesheet" href="../profile/styles.css">
         <link rel="icon" href="/images/Logo_form.png">
         <title>Profile</title>
     </head>
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li>
-                    <a class="logo"href="index.html">
+                    <a class="logo"href="../">
                         <img src="../images/Logo_form.png" alt="logo">
                         <h1>KSHub</h1>
                     </a>
@@ -26,10 +26,10 @@
     </header>
     <main>
     <div class="content">
-        <a href="/settings/">Bearbeiten</a>
+        <a href="../settings/">Bearbeiten</a>
         <div id="profile">
             <div id="fixed-information">
-                <img src="/images/profile.jpeg" alt="Profile Picture">
+                <img src="../images/profile.jpeg" alt="Profile Picture">
                 <div id="personal-information">
                     <h1>Mohamed Mustafa</h1>
                     <h2>mohamed.mustafa@student.ksh.ch</h2>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div id="subject">
-                    <h1>Sex</h1>
+                    <h1>Wirtschaft und Recht</h1>
                     <div id="scale">
                         <div id="yes"></div>
                     </div>
@@ -74,9 +74,9 @@
         <div class="sidebar">
             <ul class="sidelist">
                 <li style="font-weight: bold;">Profile</li>
-                <li><a href="/matches/">Matches</a></li>
-                <li><a href="/chat/">Chats</a></li>
-                <li><a href="/settings/">Einstellungen</a></li>
+                <li><a href="/frontend/matches/">Matches</a></li>
+                <li><a href="/frontend/chat/">Chats</a></li>
+                <li><a href="/frontend/settings/">Einstellungen</a></li>
             </ul>
         </div>
     </div>
