--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,16 +16,16 @@
         <nav>
             <ul>
                 <li>
-                    <a class="logo"href="index.html">
+                    <a class="logo"href="./">
                         <img src="./images/Logo_form.png" alt="logo">
                         <h1>KSHub</h1>
                     </a>
                 </li>
-                <li class="notLoggedIn"><a href="/login/">Login</a></li>
-                <li class="notLoggedIn"><a href="/registration/" class="marked">Registrieren</a></li>
+                <li class="notLoggedIn"><a href="./login/">Login</a></li>
+                <li class="notLoggedIn"><a href="./registration/" class="marked">Registrieren</a></li>
                 <li class="loggedIn"><a href="">Abmelden</a></li>
-                <li class="loggedIn"><a href="/profile/" class="profilePicture">
-                    <img src="/images/profile.jpeg" alt="profile picture" class="profilePicture">
+                <li class="loggedIn"><a href="./profile/" class="profilePicture">
+                    <img src="./images/profile.jpeg" alt="profile picture" class="profilePicture">
                 </a></li>
             </ul>
         </nav>
