--- a/frontend/registration/index.html
+++ b/frontend/registration/index.html
@@ -31,7 +31,7 @@
           minlength="8"
         />
         <input type="submit" value="Registrieren" />
-        <a href="/login/">Anmelden</a>
+        <a href="../login/">Anmelden</a>
       </form>
     </div>
   </body>
